<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detailStory.DetailActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/detail_story"
        app:titleTextColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="155dp"
        android:layout_height="132dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image"
        android:src="@drawable/baseline_image_24"
        app:layout_constraintBottom_toTopOf="@id/tv_detail_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_detail_description"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Details"
        android:textColor="#757575"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_detail_createdAt"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_detail_createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        android:textSize="14sp"
        android:textColor="#757575"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
