<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp" />

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image"
            android:src="@drawable/baseline_image_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_item_name"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_name"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_item_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_item_photo"
            app:layout_constraintTop_toTopOf="@id/iv_item_photo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="224dp"
            android:layout_height="34dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textColor="#616161"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/iv_item_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
